ncc/testsuite/positive/bug-0902.n
using System.Console;

module Program {

    Main() : void {
        def x = ["a",  null];
        def y = ["b", "a",  null];
        def z = [null, null];
        def k = list.Cons("a", null);  // shoot myself in foot
        def t = list.Cons("a", null);
        WriteLine(x.GetHashCode() == y.Tail.GetHashCode());
        WriteLine(x.GetHashCode() != z.GetHashCode());
        WriteLine(z.GetHashCode() != 0);
        WriteLine(k.GetHashCode() != 0);
        WriteLine(k.GetHashCode() == t.GetHashCode());
    }

}

/*
BEGIN-OUTPUT
True
True
True
True
True
END-OUTPUT
*/