ncc/testsuite/negative/anonymous-classes-0.n
using Nemerle.Extensions;

module Program {

    Main() : void {
        def t = ("qwer", [1], array[1.0, 2.0, 3.0]);
        def _x = new (a = new(x = new(), y = "adsf"), b = new[](), c = new[k,t,g]("qwe", 1, 2.0), d = new[k,t,g](t));    // OK
    }

}